discussion/kv_engine/160058/160058_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add config to support forcing group commits

Change-Id: If6768ee8d8d73e7481b16c9c876f18834a553e43

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-08-25 07:13:38.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-25 07:24:01.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38912/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(441): error C2039: "GroupCommitForcedDelayDuration": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11576/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28: error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.GroupCommitForcedDelayDuration =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11576/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11576/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33170/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33170/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12314/ : FAILURE

Compile error at [2021-08-25T07:17:47.888Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1229/ : FAILURE

Compile error at [2021-08-25T07:21:48.998Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: ?struct magma::Magma::Config? has no member named ?GroupCommitForcedDelayDuration?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1229/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1218/ : FAILURE

Compile error at [2021-08-25T07:16:12.868Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13402/ : FAILURE

Compile error at [2021-08-25T07:16:40.518Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master_2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: ?struct magma::Magma::Config? has no member named ?GroupCommitForcedDelayDuration?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13783/ : FAILURE

Compile error at [2021-08-25T07:15:29.773Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21323/ : FAILURE

Compile error at [2021-08-25T07:16:58.854Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master_2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:441:28:
error: no member named "GroupCommitForcedDelayDuration" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10355/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13185/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-09-07 20:14:03.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
